kubernetes-manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gym-app
  labels:
    type: webapp
    app: test
spec:
  template:
    metadata:
      name: myapp-pod
      labels:
        type: webapp
    spec:
      containers:
        - name: mywebapp
          image: harish0604/gymapp:v1
          ports:
          - containerPort: 80
  replicas: 3
  selector:
    matchLabels:
      type: webapp
