kubernetes-manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gymapp-svc
spec:
  type: ClusterIP
  ports:
    - port: 8081
      targetPort: 80
  selector:
    type: webapp
