kubernetes-manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  labels:
    name: dg-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: gym.harishpro.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gymapp-svc
                port:
                  number: 8081
